--- a/exp4-train_binary_2_class.ipynb
+++ b/exp4-train_binary_2_class.ipynb
@@ -5,9 +5,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment 2: Problem as Multiclass classification\n",
+    "# Experiment 4: Problem as binary classification\n",
     "Use `Cross-entropy loss` for classification\n",
     "Evaluate metrics by checking if `predicted index == monkeypox` index (5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imports"
    ]
   },
   {
@@ -32,6 +40,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set seed for reproducibility"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -46,6 +62,14 @@
     "    random.seed(seed)\n",
     "\n",
     "set_seed(42)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metric calculation function"
    ]
   },
   {
@@ -66,6 +90,14 @@
     "    accuracy = (tp + tn)/ (tp + tn + fp + fn + 0.00001)\n",
     "    \n",
     "    return precision, recall, f1, accuracy"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define Dataset and Dataloader"
    ]
   },
   {
@@ -90,6 +122,14 @@
     "        disease = os.path.basename(os.path.dirname(image_path))\n",
     "        \n",
     "        return self.transform(image), torch.tensor(1 if disease == 'monkeypox' else 0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apply the transforms function to preprocess"
    ]
   },
   {
@@ -129,6 +169,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prepare Dataloaders"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -136,6 +184,14 @@
    "source": [
     "train_loader = DataLoader(train_set, 8, shuffle=True)\n",
     "val_loader = DataLoader(val_set, 8, shuffle=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check available device for inference"
    ]
   },
   {
@@ -157,6 +213,14 @@
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "device"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prepare for training"
    ]
   },
   {
@@ -193,6 +257,14 @@
    "outputs": [],
    "source": [
     "metrics = {phase: {metric: [] for metric in ['loss', 'acc', 'prec', 'rec', 'f1']} for phase in ['train', 'val']}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training"
    ]
   },
   {
@@ -2237,6 +2309,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save metrics for later use"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
@@ -2245,6 +2325,14 @@
     "import json\n",
     "with open(\"metrics_bin_1.json\", \"w\") as fp:\n",
     "    json.dump(metrics, fp)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize metrics"
    ]
   },
   {
@@ -2377,7 +2465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2391,12 +2479,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (default, Nov 15 2020, 14:28:56) \n[GCC 7.3.0]"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e60a13762b311d75094e19903d9f763963a5a049301dac08add2508c5be7c1e7"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
