--- a/exp5-train_binary_balanced.ipynb
+++ b/exp5-train_binary_balanced.ipynb
@@ -5,9 +5,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment 2: Problem as Multiclass classification\n",
+    "# Experiment 5: Problem as binary classification\n",
     "Use `Cross-entropy loss` for classification\n",
     "Evaluate metrics by checking if `predicted index == monkeypox` index (5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imports"
    ]
   },
   {
@@ -31,6 +39,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set seed for reproducibility\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -45,6 +62,15 @@
     "    random.seed(seed)\n",
     "\n",
     "set_seed(42)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metric calculation function\n",
+    "\n"
    ]
   },
   {
@@ -65,6 +91,15 @@
     "    accuracy = (tp + tn)/ (tp + tn + fp + fn + 0.00001)\n",
     "    \n",
     "    return precision, recall, f1, accuracy"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define Dataset and Dataloader\n",
+    "\n"
    ]
   },
   {
@@ -89,6 +124,15 @@
     "        disease = os.path.basename(os.path.dirname(image_path))\n",
     "        \n",
     "        return self.transform(image), torch.tensor(1 if disease == 'monkeypox' else 0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apply the transforms function to preprocess\n",
+    "\n"
    ]
   },
   {
@@ -128,6 +172,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prepare Dataloaders\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -156,6 +209,14 @@
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "device"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prepare for training\n"
    ]
   },
   {
@@ -192,6 +253,14 @@
    "outputs": [],
    "source": [
     "metrics = {phase: {metric: [] for metric in ['loss', 'acc', 'prec', 'rec', 'f1']} for phase in ['train', 'val']}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training"
    ]
   },
   {
@@ -768,6 +837,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save metrics for later use\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -776,6 +853,14 @@
     "import json\n",
     "with open(\"metrics_bin_balanced.json\", \"w\") as fp:\n",
     "    json.dump(metrics, fp)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize metrics\n"
    ]
   },
   {
@@ -908,7 +993,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -922,12 +1007,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (default, Nov 15 2020, 14:28:56) \n[GCC 7.3.0]"
+   "version": "3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e60a13762b311d75094e19903d9f763963a5a049301dac08add2508c5be7c1e7"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
