--- a/exp3-saliency.ipynb
+++ b/exp3-saliency.ipynb
@@ -21,6 +21,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selecting GPU or CPU"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -42,6 +50,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading ResNet50"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -57,6 +73,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image Preprocessing using Transformations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -67,6 +91,14 @@
     "    transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225)),\n",
     "    transforms.Resize((224, 224)),\n",
     "])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicting disease class and extracting Saliency Map"
    ]
   },
   {
@@ -114,6 +146,14 @@
     "scores.backward()\n",
     "\n",
     "saliency, _ = torch.max(image.grad.data.abs(),dim=1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize Saliency Map"
    ]
   },
   {
