--- a/exp4-train_binary_2_class.ipynb
+++ b/exp4-train_binary_2_class.ipynb
@@ -2465,7 +2465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml_env",
    "language": "python",
    "name": "python3"
   },
@@ -2479,12 +2479,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.0 (default, Nov 15 2020, 14:28:56) \n[GCC 7.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
+    "hash": "e60a13762b311d75094e19903d9f763963a5a049301dac08add2508c5be7c1e7"
    }
   }
  },
